apps/searxng/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: searxng
  template:
    metadata:
      labels:
        app: searxng
    spec:
      containers:
        - name: searxng
          image: docker.io/searxng/searxng:2026.8.10-0a118066d
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - mountPath: /etc/searxng/settings.yml
              name: searxng-config
              subPath: settings.yml
        - name: valkey
          image: docker.io/valkey/valkey:9.1.2
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              memory: 128Mi
          args:
            - --loglevel
            - warning
      restartPolicy: Always
      volumes:
        - name: searxng-config
          configMap:
            name: searxng-config
---
apiVersion: v1
kind: Service
metadata:
  name: searxng
spec:
  selector:
    app: searxng
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
