apps/searxng/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: searxng
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`searxng.doink.co.za`)
      middlewares:
        - name: searxng-whitelist
      services:
        - name: searxng
          port: 8080
  tls:
    secretName: searxng-tls
